// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserRepository should call login API for OTP and return response 1`] = `
Object {
  "access_token": "access_token",
  "country_code": "IN",
  "email": "r@gmail.com",
  "full_name": "Rishabh Modi",
  "phone_number": "99999999",
  "refresh_token": "refresh_token",
}
`;

exports[`UserRepository should call login API for email and return response 1`] = `
Object {
  "access_token": "access_token",
  "country_code": "IN",
  "email": "r@gmail.com",
  "full_name": "Rishabh Modi",
  "phone_number": "99999999",
  "refresh_token": "refresh_token",
}
`;

exports[`UserRepository should call otp API for fetch 1`] = `
Object {
  "otp_sent": true,
}
`;

exports[`UserRepository should call otp API for verify 1`] = `
Object {
  "otp_verify": true,
}
`;

exports[`UserRepository should call socialLogin and return response 1`] = `
Object {
  "access_token": "",
  "refresh_token": "",
  "user": Object {
    "country_code": "IN",
    "email": "r@gmail.com",
    "full_name": "Rishabh Modi",
    "phone_number": "99999999",
  },
}
`;

exports[`UserRepository should check if email exists 1`] = `
Object {
  "is_exists": true,
}
`;

exports[`UserRepository should check if phone exists 1`] = `
Object {
  "is_exists": true,
}
`;
